# SonarBot

./: .env.example  .gitignore  @AutomationLog.txt  README.md  config.toml.example  ml_metrics_test.jsonl  patch_server.py  pyproject.toml  requirements.txt
assistant/: __init__.py  main.py
assistant/agent/: compaction.py  context.py  loop.py  queue.py  session.py  session_manager.py  streaming.py  system_prompt.py
assistant/app_skills/: __init__.py  browser_pack.py  document_pack.py  excel_pack.py  manager.py  preset_pack.py  simple_xlsx.py  system_control_pack.py  task_manager_pack.py  vscode_pack.py
assistant/automation/: __init__.py  daily_digest.py  delivery.py  desktop_executor.py  desktop_routine_executor.py  desktop_watcher.py  engine.py  heartbeat.py  models.py  report_generator.py  scheduler.py  standing_orders.py  store.py  webhook_handler.py
assistant/browser_workflows/: __init__.py  browser_macros.py  browser_monitors.py  engine.py  models.py  nlp.py  recipes.py  site_adapters.py  state.py
assistant/channels/: __init__.py  base.py
cli/: __init__.py  app.py  doctor.py  onboard.py  ws_client.py
colab_notebooks/: browser_intent_training.ipynb
docs/: architecture.md  config_reference.md  deployment.md  hooks.md  ml_tool_router_analysis.md  skills.md
ml_integration/: IMPLEMENT_FAST.md  README.md
scripts/: file_management_smoke.py
tests/: conftest.py  helpers.py
webchat/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
workspace/: AGENTS.md  BOOT.md  MEMORY.md  SOUL.md  STANDING_ORDERS.md  TOOLS.md  USER.md
(+255 files in other folders)
