[project]
name = "sonarbot-assistant"
version = "0.5.0"
description = "SonarBot autonomous assistant with advanced memory, browser sessions, OAuth, ACP, sub-agents, and sandboxing"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiogram>=3.17.0",
    "aiosqlite>=0.21.0",
    "APScheduler>=3.10.4",
    "beautifulsoup4>=4.12.3",
    "cryptography>=44.0.0",
    "docker>=7.1.0",
    "duckduckgo-search>=7.0.1",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "openai>=1.65.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.5",
    "playwright>=1.50.0",
    "pydantic-settings>=2.8.0",
    "pydantic>=2.10.0",
    "PyYAML>=6.0.2",
    "python-dotenv>=1.0.1",
    "rank-bm25>=0.2.2",
    "rich>=14.0.0",
    "structlog>=25.1.0",
    "typer>=0.16.0",
    "uvicorn[standard]>=0.34.0",
    "watchfiles>=1.1.0",
    "websockets>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]
memory = [
    "chromadb>=1.0.0",
    "sentence-transformers>=3.4.0",
]

[project.scripts]
assistant = "cli.app:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["assistant*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
